# eae_runtime

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
eae_runtime/: __init__.py  adjoint.py  backend.py  blocks.py  boundary_store.py  config.py  events.py  forward_executor.py  logging_utils.py  memory.py  pipeline.py  profiler.py  reconstruction.py  runtime.py
eae_runtime/contrib/: __init__.py  transformer_blocks.py
eae_runtime/passes/: __init__.py  base.py  clip.py  logging_pass.py  quantize.py  regularization.py  synthetic_gradient.py
eae_runtime/schedulers/: __init__.py  async_scheduler.py  base.py  distributed.py  pipeline_scheduler.py  sequential.py
examples/: train_transformer_lm.py
tests/: conftest.py  test_adjoint.py  test_backend.py  test_boundary_store.py  test_config_and_blocks.py  test_contrib_transformer_blocks.py  test_distributed_multiprocess.py  test_end_to_end_transformer.py  test_events.py  test_gradient_equivalence.py  test_memory_leaks.py  test_memory_manager.py  test_mixed_precision.py  test_passes.py  test_profiler.py  test_reconstruction.py  test_runtime.py  test_schedulers.py
