[build-system]
requires = ["setuptools>=77.0", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eae-runtime"
dynamic = ["version"]
description = "A programmable, block-local reverse-mode execution engine that orchestrates PyTorch's local autograd (Explicit Adjoint Exposure runtime)."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Vladimer Khasia" },
]
keywords = [
    "pytorch",
    "autograd",
    "backpropagation",
    "transformer",
    "deep-learning",
    "training-runtime",
    "gradient-compression",
    "distributed-training",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/VladimerKhasia/eae_runtime"
Repository = "https://github.com/VladimerKhasia/eae_runtime"
Issues = "https://github.com/VladimerKhasia/eae_runtime/issues"
Changelog = "https://github.com/VladimerKhasia/eae_runtime/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["eae_runtime*"]

[tool.setuptools.package-data]
eae_runtime = ["py.typed"]

[tool.setuptools_scm]
write_to = "eae_runtime/_version.py"
# Local dev commits (no tag) get a version like 2.0.1.dev3+g<sha>; a clean
# tagged commit (`git tag v2.0.0`) gets exactly "2.0.0". Release workflow
# publishes only from tagged commits.
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:torch.*",
]

[tool.coverage.run]
source = ["eae_runtime"]
branch = true
omit = ["eae_runtime/_version.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line length is enforced softly via `line-length`, not as a hard error on strings/comments
]

[tool.ruff.lint.isort]
known-first-party = ["eae_runtime"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["eae_runtime/_version.py"]